# CLASS_2_GoogleCalendar

./: .gitignore  README.md  log.py  main.py  pyproject.toml
src/: csv.ts  events.ts  ical.ts  main.ts  timetable.ts  utils.ts
