[tool.poetry]
authors = ["hogehoge@hoge.com"]
description = "CLASSの学生時間割表の内容をGoogleCalendarへ登録する。"
license = "MIT"
name = "class-calendar"
packages = [{include = "class_calendar"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bs4 = "^0.0.1"
google-api-python-client = "^2.60.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
python = "^3.10"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
